--- a/app/assets/stylesheets/topics.scss
+++ b/app/assets/stylesheets/topics.scss
@@ -5,6 +5,7 @@
 .work {
   border: 1px solid lightgrey;
   border-radius: 20px;
+  overflow: hidden;
   background-color: rgba(46, 134, 193, 0.5);
   display: flex;
   margin: auto;
@@ -67,7 +68,8 @@
   bottom: 0;
   left: 0;
   right: 0;
-  background-color: rgba(214, 137, 16, 0.1);
+  // background-color: rgba(214, 137, 16, 0.1);
+  backdrop-filter: blur(5px);
 }
 
 #instructions {
