--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -1,5 +1,3 @@
-<p id="notice"><%= notice %></p>
-
 <p>
   <strong>Name:</strong>
   <%= @topic.name %>
@@ -51,4 +49,5 @@
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
+<%= link_to 'Stats', "#" %> |
 <%= link_to 'Back', topics_path %>
