--- a/app/views/topics/show.html.erb
+++ b/app/views/topics/show.html.erb
@@ -49,5 +49,5 @@
 </p>
 
 <%= link_to 'Edit', edit_topic_path(@topic) %> |
-<%= link_to 'Stats', "#" %> |
+<%= link_to 'Stats', topic_stats_path(@topic) %> |
 <%= link_to 'Back', topics_path %>
