--- a/app/views/topics/stats.html.erb
+++ b/app/views/topics/stats.html.erb
@@ -4,7 +4,7 @@
 <hr>
 <i>** You can hide an item if you already master it!</i>
 <br>
-<table>
+<table id="stats-table">
   <tr>
     <th><%= @topic.key_term.capitalize %></th>
     <th><%= @topic.value_term.capitalize %></th>
